[package]
name = "sqlx_qb"
version = "0.1.0"
edition = "2021"
description = "A simple query builder for sqlx."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dududaa/sqlx-qb"
readme = "README.md"
keywords = ["rust", "sqlx", "query-builder"]
categories = ["database"]

[lib]
path = "src/lib.rs"

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
any = ["sqlx/any"]
uuid = ["sqlx/uuid"]
chrono = ["sqlx/chrono"]

[dependencies]
sqlx = { version = "0.8", default-features = false }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }