[package]
name = "sqlx_qb"
version = "0.1.0"
edition = "2021"
description = "A simple query builder for sqlx."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dududaa/sqlx-qb"
readme = "README.md"
keywords = ["rust", "sqlx", "query-builder"]
categories = ["database"]

[lib]
path = "src/lib.rs"

[features]
mysql = ["sqlx/mysql"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
sqlx = { version = "0.9.0", default-features = false }
uuid = { version = "1.23.1", features = ["v4"] }
qb_macro = { path = "qb_macro" }
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_json = { version = "1.0.150", optional = true }

[dev-dependencies]
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "sqlite-bundled"] }
tokio = { version = "1.52.3", features = ["macros", "rt"] }
